--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/IMG_20220930_093514_prev_ui.png">
+    <title>Elias</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body class="text-white">
-    <div class="fixed__top">
+    <div class="fixed__top d-none d-md-flex">
         <img class="" src="images/Line 10 (Stroke).png" alt="" height="191">
-        <a class="social__networks" href="#"><i class="bi bi-github"></i></a>
-        <a class="social__networks" href="#"><i class="bi bi-instagram"></i></a>
-        <a class="social__networks" href="#"><i class="bi bi-youtube"></i></a>
+        <a class="social__networks" href="https://github.com/javohirveb" target="_blank"><i
+                class="bi bi-github"></i></a>
+        <a class="social__networks" href="https://instagram.com/javohirveb" target="_blank"><i
+                class="bi bi-instagram"></i></a>
+        <a class="social__networks" href="https://youtube.com/@javohirveb" target="_blank"><i
+                class="bi bi-youtube"></i></a>
     </div>
 
     <header>
@@ -51,7 +55,8 @@
                             </li>
                         </ul>
                     </div>
-                </div><select
+                </div>
+                <select
                     class="form-select bg-transparent text-secondary border-0 w-auto fw-bold d-none d-md-inline-block"
                     aria-label="Default select example">
                     <option selected>EN</option>
@@ -61,7 +66,8 @@
             </nav>
             <div class="hero margin__top d-flex align-items-center flex-column flex-md-row">
                 <div class="hero__content">
-                    <h1>Elias is a <span class="color-pink">web designer</span> and <br> <span class="color-pink">front-end
+                    <h1>Elias is a <span class="color-pink">web designer</span> and <br> <span
+                            class="color-pink">front-end
                             developer</span></h1>
                     <p class="hero__text">He crafts responsive websites where technologies meet creativity</p>
                     <a class="main__link" href="#">Contact</a>
@@ -103,7 +109,7 @@
                         <a class="text-white" href="#">View all ~~></a>
                     </div>
                 </div>
-                <div class="row mt-5 justify-content-between">
+                <div class="row mt-5 justify-content-between px-4">
                     <div class="col-md-3 project__item px-0">
                         <img class="w-100" src="images/Rectangle 22.jpg" alt="">
                         <p class="text-secondary my-2 px-3">HTML SCSS Python Flask</p>
@@ -136,7 +142,7 @@
             <div class="container">
                 <div class="d-flex align-items-center">
                     <h3 class="h3 me-2"><span class="color-pink">#</span>skills</h3>
-                    <img class="w-25" src="images/Line 7 (Stroke).png" alt="">
+                    <img class="w-50" src="images/Line 7 (Stroke).png" alt="">
                 </div>
                 <div class="mt-5 d-flex">
                     <div class="skills__img">
@@ -185,7 +191,7 @@
             <div class="container">
                 <div class="d-flex align-items-center">
                     <h3 class="h3 me-2"><span class="color-pink">#</span>about-me</h3>
-                    <img class="w-25" src="images/Line 7 (Stroke).png" alt="">
+                    <img class="w-50" src="images/Line 7 (Stroke).png" alt="">
                 </div>
                 <div class="row mt-5 align-items-center">
                     <div class="col-md-5">
@@ -215,7 +221,7 @@
             <div class="container">
                 <div class="d-flex align-items-center">
                     <h3 class="h3 me-2"><span class="color-pink">#</span>contact</h3>
-                    <img class="w-25" src="images/Line 7 (Stroke).png" alt="">
+                    <img class="w-50" src="images/Line 7 (Stroke).png" alt="">
                 </div>
                 <div class="row mt-5">
                     <div class="col-md-5">
@@ -244,7 +250,7 @@
     <footer>
         <hr>
         <div class="container">
-            <div class="d-flex justify-content-between mt-5">
+            <div class="d-flex justify-content-between mt-5 flex-column flex-md-row">
                 <div>
                     <img src="images/logo-img.svg" alt="">
                     <span class="text-secondary">elias@elias.ml</span>
