--- a/index.html
+++ b/index.html
@@ -258,9 +258,12 @@
                 </div>
                 <div>
                     <h4>Social Network</h4>
-                    <a class="social__networks" href="#"><i class="bi bi-github"></i></a>
-                    <a class="social__networks" href="#"><i class="bi bi-instagram"></i></a>
-                    <a class="social__networks" href="#"><i class="bi bi-youtube"></i></a>
+                    <a class="social__networks" href="https://github.com/javohirveb" target="_blank"><i
+                            class="bi bi-github"></i></a>
+                    <a class="social__networks" href="https://instagram.com/javohirveb" target="_blank"><i
+                            class="bi bi-instagram"></i></a>
+                    <a class="social__networks" href="https://youtube.com/@javohirveb" target="_blank"><i
+                            class="bi bi-youtube"></i></a>
                 </div>
             </div>
         </div>
