--- a/html/contact.html
+++ b/html/contact.html
@@ -12,11 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
-        integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
-    <link rel="shortcut icon" href="images/IMG_20220930_093514_prev_ui.png">
+    <link rel="shortcut icon" href="../images/IMG_20220930_093514_prev_ui.png">
     <title>Elias</title>
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -33,6 +29,7 @@
     </div>
 
     <header>
+
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
                 <div class="container-fluid">
@@ -48,13 +45,13 @@
                                         class="color-pink">#</span>home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><span class="color-pink">#</span>works</a>
+                                <a class="nav-link" href="project.html"><span class="color-pink">#</span>works</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><span class="color-pink">#</span>about-me</a>
+                                <a class="nav-link" href="about-me.html"><span class="color-pink">#</span>about-me</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><span class="color-pink">#</span>contacts</a>
+                                <a class="nav-link" href="contact.html"><span class="color-pink">#</span>contacts</a>
                             </li>
                         </ul>
                     </div>
@@ -68,6 +65,7 @@
                 </select>
             </nav>
         </div>
+
     </header>
 
     <main>
@@ -114,6 +112,7 @@
     </main>
 
     <footer class="footer">
+
         <hr>
         <div class="container">
             <div class="footer__main">
@@ -138,12 +137,6 @@
         </div>
     </footer>
 
-
-
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
