--- a/html/project.html
+++ b/html/project.html
@@ -12,11 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
-        integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
-    <link rel="shortcut icon" href="images/IMG_20220930_093514_prev_ui.png">
+    <link rel="shortcut icon" href="../images/IMG_20220930_093514_prev_ui.png">
     <title>Elias</title>
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -33,6 +29,7 @@
     </div>
 
     <header>
+
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
                 <div class="container-fluid">
@@ -70,6 +67,7 @@
             <h1 class="main__heading"><span class="color-pink">/</span>projects</h1>
             <p class="main__p">List of my projects</p>
         </div>
+
     </header>
 
     <main>
@@ -113,7 +111,7 @@
                         <a class="main__link" href="#">Live <~></a>
                     </div>
                     <div class="project__item border__width">
-                        <img src="../images/Rectangle 22 (1).png" alt="">
+                        <img src="../images/Rectangle 22 (3).png" alt="">
                         <p class="main__p">HTML SCSS Python Flask</p>
                         <hr>
                         <h5>ProtectX</h5>
@@ -121,7 +119,7 @@
                         <a class="main__link" href="#">Live <~></a>
                     </div>
                     <div class="project__item border__width">
-                        <img src="../images/Rectangle 22 (2).png" alt="">
+                        <img src="../images/Rectangle 22 (4).png" alt="">
                         <p class="main__p">HTML SCSS Python Flask</p>
                         <hr>
                         <h5>Kahoot Answers</h5>
@@ -223,29 +221,6 @@
         </div>
     </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
