--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
-        integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
     <link rel="shortcut icon" href="images/IMG_20220930_093514_prev_ui.png">
     <title>Elias</title>
     <link rel="stylesheet" href="css/main.css">
@@ -33,6 +29,7 @@
     </div>
 
     <header>
+
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-dark bg-transparent">
                 <div class="container-fluid">
@@ -51,10 +48,12 @@
                                 <a class="nav-link" href="html/project.html"><span class="color-pink">#</span>works</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="html/about-me.html"><span class="color-pink">#</span>about-me</a>
+                                <a class="nav-link" href="html/about-me.html"><span
+                                        class="color-pink">#</span>about-me</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="html/contact.html"><span class="color-pink">#</span>contacts</a>
+                                <a class="nav-link" href="html/contact.html"><span
+                                        class="color-pink">#</span>contacts</a>
                             </li>
                         </ul>
                     </div>
@@ -67,6 +66,7 @@
                     <option value="2">UZ</option>
                 </select>
             </nav>
+
             <div class="hero margin__top">
                 <div class="hero__content">
                     <h1>Elias is a <span class="color-pink">web designer</span> and <br> <span
@@ -84,6 +84,7 @@
                 </div>
             </div>
         </div>
+
     </header>
 
     <main>
@@ -273,29 +274,6 @@
         </div>
     </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
